# rusty-book-manager

./: Cargo.toml  Makefile.toml
adapter/: Cargo.toml
adapter/migrations/: 20241227065714_start.down.sql  20241227065714_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: book.rs
adapter/src/repository/: book.rs  health.rs
api/: Cargo.toml
api/src/handler/: book.rs  health.rs
api/src/model/: book.rs
api/src/route/: book.rs  health.rs
frontend/: pnpm-lock.yaml
kernel/src/model/book/: mod.rs
kernel/src/repository/: book.rs
registry/src/: lib.rs
shared/src/: config.rs
src/: main.rs
