[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
src = "src/bin/app.rs"

[workspace]
members = [
    "api",
    "kernel",
    "adapter",
    "shared",
    "registry"
]

[dependencies]
anyhow = "1"


[dependencies.tokio]
version = "1"
features = [
    "full"
]

[dependencies.axum]
version = "0.7"
features = [
    "macros"
]


[dependencies.sqlx]
version = "0.8"
features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate"
]

[dev-dependencies]
rstest = "0.23"