[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
src = "src/bin/app.rs"

[workspace]
members = [
    "api",
    "kernel",
    "adapter",
    "shared",
    "registry"
]

[workspace.dependencies]
adapter = { path = "adapter" }
api = { path = "api" }
kernel = { path = "kernel" }
registry = { path = "registry" }
shared = { path = "shared" }

anyhow = "1"
rstest = "0.23"
async-trait = "0.1"
derive-new = "0.7"

[workspace.dependencies.tokio]
version = "1"
features = [
    "full"
]

[workspace.dependencies.axum]
version = "0.7"
features = [
    "macros"
]


[workspace.dependencies.sqlx]
version = "0.8"
features = [
    "runtime-tokio",
    "uuid",
    "chrono",
    "macros",
    "postgres",
    "migrate"
]

[dependencies]
adapter.workspace = true
api.workspace = true
kernel.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
tokio.workspace = true
sqlx.workspace = true
axum.workspace = true


[dev-dependencies]
rstest.workspace = true


